{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 325,
  "lineage": "49c46754-6e87-718d-6e65-d7da398adc1b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e2697c4eb833bc39",
            "arn": "arn:aws:ec2:us-east-1:135808924399:elastic-ip/eipalloc-0e2697c4eb833bc39",
            "association_id": "eipassoc-0371dc6a01233f60d",
            "domain": "vpc",
            "id": "eipalloc-0e2697c4eb833bc39",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0370ea02a820c7ba2",
            "private_dns": "ip-10-0-1-253.ec2.internal",
            "private_ip": "10.0.1.253",
            "public_dns": "ec2-44-206-148-19.compute-1.amazonaws.com",
            "public_ip": "44.206.148.19",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "RDS-eip"
            },
            "tags_all": {
              "Name": "RDS-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-normal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-084568db4383264d4",
            "arn": "arn:aws:ec2:us-east-1:135808924399:instance/i-0d3926f656c9af6e7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d3926f656c9af6e7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "example-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fd5ef35e60502aa1",
            "private_dns": "ip-10-0-1-188.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.188",
            "public_dns": "ec2-98-83-162-142.compute-1.amazonaws.com",
            "public_ip": "98.83.162.142",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04de8308546907f63",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-08b3831fc5f784cae"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09a4c68ecbf72b572",
            "tags": {
              "Name": "EC2"
            },
            "tags_all": {
              "Name": "EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08b3831fc5f784cae"
            ]
          },
          "dependencies": [
            "aws_key_pair.example",
            "aws_security_group.SG",
            "aws_subnet.Pub-subnet",
            "aws_vpc.RDS-VPC",
            "tls_private_key.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet-gtw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:135808924399:internet-gateway/igw-0927b81dd949cc8ec",
            "id": "igw-0927b81dd949cc8ec",
            "owner_id": "135808924399",
            "tags": {
              "Name": "Internet-gtw1"
            },
            "tags_all": {
              "Name": "Internet-gtw1"
            },
            "vpc_id": "vpc-0f941924a0a933601"
          },
          "dependencies": [
            "aws_vpc.RDS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT-gtw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e2697c4eb833bc39",
            "association_id": "eipassoc-0371dc6a01233f60d",
            "connectivity_type": "public",
            "id": "nat-00ab3c52cbbb48212",
            "network_interface_id": "eni-0370ea02a820c7ba2",
            "private_ip": "10.0.1.253",
            "public_ip": "44.206.148.19",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09a4c68ecbf72b572",
            "tags": {
              "Name": "Nat-Gateway"
            },
            "tags_all": {
              "Name": "Nat-Gateway"
            }
          },
          "dependencies": [
            "aws_eip.eip1",
            "aws_internet_gateway.internet-gtw",
            "aws_subnet.Pub-subnet",
            "aws_vpc.RDS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Private-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:135808924399:route-table/rtb-0db8633f396fa1396",
            "id": "rtb-0db8633f396fa1396",
            "owner_id": "135808924399",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-00ab3c52cbbb48212",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private-RT"
            },
            "tags_all": {
              "Name": "Private-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f941924a0a933601"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip1",
            "aws_internet_gateway.internet-gtw",
            "aws_nat_gateway.NAT-gtw",
            "aws_subnet.Pub-subnet",
            "aws_vpc.RDS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:135808924399:route-table/rtb-05fa1324e834a83ce",
            "id": "rtb-05fa1324e834a83ce",
            "owner_id": "135808924399",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0927b81dd949cc8ec",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-RT"
            },
            "tags_all": {
              "Name": "Public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f941924a0a933601"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet-gtw",
            "aws_vpc.RDS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Pub-ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01602f5a7cab443f7",
            "route_table_id": "rtb-05fa1324e834a83ce",
            "subnet_id": "subnet-09a4c68ecbf72b572"
          },
          "dependencies": [
            "aws_internet_gateway.internet-gtw",
            "aws_route_table.Public-RT",
            "aws_subnet.Pub-subnet",
            "aws_vpc.RDS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-ass1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e5070c14d91aead",
            "route_table_id": "rtb-0db8633f396fa1396",
            "subnet_id": "subnet-0a21988676e09c393"
          },
          "dependencies": [
            "aws_eip.eip1",
            "aws_internet_gateway.internet-gtw",
            "aws_nat_gateway.NAT-gtw",
            "aws_route_table.Private-RT",
            "aws_subnet.Private-subnet1",
            "aws_subnet.Pub-subnet",
            "aws_vpc.RDS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-ass2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a4203d8a9bb474de",
            "route_table_id": "rtb-0db8633f396fa1396",
            "subnet_id": "subnet-021f7485835f05a49"
          },
          "dependencies": [
            "aws_eip.eip1",
            "aws_internet_gateway.internet-gtw",
            "aws_nat_gateway.NAT-gtw",
            "aws_route_table.Private-RT",
            "aws_subnet.Private-subnet2",
            "aws_subnet.Pub-subnet",
            "aws_vpc.RDS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:135808924399:security-group/sg-08b3831fc5f784cae",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08b3831fc5f784cae",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20250515022327661400000001",
            "name_prefix": "terraform-",
            "owner_id": "135808924399",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "security-grp"
            },
            "tags_all": {
              "Name": "security-grp"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f941924a0a933601"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.RDS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:135808924399:security-group/sg-0f4fdbd1980081328",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f4fdbd1980081328",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow PostgreSQL from EC2 SG",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08b3831fc5f784cae"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "terraform-20250515024943405300000001",
            "name_prefix": "terraform-",
            "owner_id": "135808924399",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "security-grp-rds"
            },
            "tags_all": {
              "Name": "security-grp-rds"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f941924a0a933601"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.SG",
            "aws_vpc.RDS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:135808924399:subnet/subnet-0a21988676e09c393",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a21988676e09c393",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "135808924399",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-subnet1"
            },
            "tags_all": {
              "Name": "Private-subnet1"
            },
            "vpc_id": "vpc-0f941924a0a933601"
          },
          "dependencies": [
            "aws_vpc.RDS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:135808924399:subnet/subnet-021f7485835f05a49",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-021f7485835f05a49",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "135808924399",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-subnet2"
            },
            "tags_all": {
              "Name": "Private-subnet2"
            },
            "vpc_id": "vpc-0f941924a0a933601"
          },
          "dependencies": [
            "aws_vpc.RDS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Pub-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:135808924399:subnet/subnet-09a4c68ecbf72b572",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a4c68ecbf72b572",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "135808924399",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-subnet"
            },
            "tags_all": {
              "Name": "Public-subnet"
            },
            "vpc_id": "vpc-0f941924a0a933601"
          },
          "dependencies": [
            "aws_vpc.RDS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "RDS-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:135808924399:vpc/vpc-0f941924a0a933601",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-057eb076c28585452",
            "default_route_table_id": "rtb-07d2545cca3971cad",
            "default_security_group_id": "sg-0902cbd67a5524f35",
            "dhcp_options_id": "dopt-07d25e5b23700ffa6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f941924a0a933601",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07d2545cca3971cad",
            "owner_id": "135808924399",
            "tags": {
              "Name": "RDS-VPC"
            },
            "tags_all": {
              "Name": "RDS-VPC"
            }
          }
        }
      ]
    }
  ]
}